# transparent-gateway

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
src/transparent_gateway/: __init__.py  circuit_breaker.py  config.py  logging_config.py  main.py  proxy.py
tests/: conftest.py
tests/integration/: test_endpoints.py  test_failover.py
tests/unit/: test_circuit_breaker.py  test_config.py  test_proxy_helpers.py
